<resources>
    <string name="app_name" translatable="false">RTranslator</string>
    <string name="mic">mic</string>
    <string name="btHeadset">bt-headset</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="continue_without_tts">Continue</string>
    <string name="delete">Delete</string>
    <string name="no_devices">no devices</string>
    <string name="available">available</string>
    <string name="not_available">not available</string>
    <string name="loading">loading…</string>
    <string name="forward">forward</string>
    <string name="conversation">Conversation</string>
    <string name="connection">Connection</string>
    <string name="translate">Translate</string>
    <string name="fix">fix</string>
    <string name="automatic">Automatic</string>
    <string name="chat">Chat</string>
    <string name="select_tts">Select TTS</string>
    <string name="unzipping">Unzipping...</string>
    <string name="testing_integrity">Testing...</string>
    <string name="paused">Paused: </string>
    <string name="applying_settings">Applying new settings...</string>
    <string name="dictionary">Dictionary</string>
    <string name="apply">Apply</string>
    <string name="speech_recognition_model">Speech Recognition Model</string>
    <string name="translation_dictionaries">Translation Dictionaries</string>
    <string name="performance">Performance</string>
    <string name="quality">Quality</string>
    <string name="versatility">Versatility</string>
    <string name="translation_model">Translation Model</string>
    <string name="system_and_other_apps">System and other apps</string>
    <string name="ram">RAM</string>
    <string name="cancel">Cancel</string>
    <string name="continue_text">Continue</string>
    <string name="ok">Ok</string>
    <string name="translation_enhancements">Translation Enhancements</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="general">General</string>
    <string name="Tatoeba" translatable="false">Tatoeba</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="offline">Offline</string>
    <string name="reset">Reset</string>
    <string name="options">Options</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="description_button_tts_manual">Manual message reading</string>
    <string name="description_button_tts_auto">Automatic message reading</string>
    <string name="description_stop_search">Stop search</string>
    <string name="description_start_search">Start search</string>
    <string name="description_checkbox_privacy">Accept privacy policy</string>
    <string name="description_disconnect_peer">Disconnect peer</string>
    <string name="description_chat_tab">Chat tab</string>
    <string name="description_connection_tab">Connection tab</string>
    <string name="description_switch_languages">Switch languages</string>
    <string name="description_copy_input_text">Copy input text</string>
    <string name="description_copy_translated_text">Copy translated text</string>
    <string name="description_clear_text">Clear text</string>
    <string name="description_text_fullscreen">Translated text full screen</string>
    <string name="description_start_microphone">Start microphone</string>
    <string name="description_stop_microphone">Stop microphone</string>
    <string name="description_close_text_mode">Close text input mode</string>
    <string name="description_send">Send text message</string>
    <string name="description_start_automatic_recognition">Start automatic recognition</string>
    <string name="description_stop_automatic_recognition">Stop automatic recognition</string>
    <string name="description_start_manual_recognition">Start manual recognition of %1$s</string>
    <string name="description_stop_manual_recognition">Stop manual recognition of %1$s</string>
    <string name="description_double_tap_fullscreen">Double tap to open in full screen</string>
    <string name="description_message_fullscreen">Open message in fullscreen</string>
    <string name="description_exit_fullscreen">Exit full screen</string>
    <string name="description_mode">Mode description</string>
    <string name="description_read_full">Read full description</string>
    <string name="description_start_download">Start download</string>
    <string name="description_delete_resource">Delete resource</string>
    <string name="description_download_error">Download error</string>
    <string name="description_start_walkietalkie">Start WalkieTalkie</string>
    <string name="description_manage_mozilla_button">Manage performance mode languages</string>
    <string name="notification_channel_name">use in background notification</string>
    <string name="privacy_check_box">I declare that I have read the <a href="https://github.com/niedev/RTranslator/blob/v2.00/privacy/Privacy_Policy_en.md">privacy policy</a></string>
    <string name="toast_working_background">RTranslator will work in background</string>
    <string name="toast_download_completed">Download completed</string>
    <string name="toast_download_error">There was an error with the download, open RTranslator to try again</string>
    <string name="toast_missing_notification_permission">To ensure this mode works properly in the background, enable notifications</string>
    <string name="dialog_confirm_delete">Confirm cancellation</string>
    <string name="dialog_confirm_exit">Confirm exit</string>
    <string name="dialog_confirm_disconnection">Are you sure you want to disconnect from&#160;</string>
    <string name="dialog_confirm_connection">Are you sure to connect with&#160;</string>
    <string name="dialog_confirm_connection_request">Accept connection request from&#160;</string>
    <string name="dialog_select_personal_language">Select personal language</string>
    <string name="dialog_select_first_language">Select primary language</string>
    <string name="dialog_select_second_language">Select secondary language</string>
    <string name="dialog_insert_name">Insert your name</string>
    <string name="dialog_confirm_apply_quit">Are you sure you want to quit without applying the new settings?</string>
    <string name="dialog_confirm_delete_resource">Are you sure you want to delete this resource?</string>
    <string name="dialog_search_hint">Search language...</string>
    <string name="dialog_no_languages">No languages found</string>
    <string name="menu_image_select_from_gallery">Select from gallery</string>
    <string name="menu_image_remove">Remove</string>
    <string name="hint_edit_text_message">Write a message</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_text">Insert text</string>
    <string name="error_missing_location_permissions">It is not possible to use the Conversation mode without location and bluetooth permissions, go to the settings to grant them, or reinstall the app</string>
    <string name="error_missing_mic_permissions">Without the microphone permission the voice recognition does not work, go to the settings to grant the permission or reinstall the app</string>
    <string name="error_missing_mic_permissions_walkietalkie">It is not possible to use the WalkieTalkie mode without microphone permission, go to the settings to grant it, or reinstall the app</string>
    <string name="error_tts_toast">Missing tts</string>
    <string name="error_tts">There was an error with the tts initialization, do you want to continue without tts?</string>
    <string name="error_missing_tts">In this device there is no google tts engine, download it to be able to use the tts</string>
    <string name="error_missing_bluetooth_le">It is not possible to use the Conversation mode because this device does not have Bluetooth Low Energy</string>
    <string name="error_internet_lack_loading">To start RTranslator an internet connection is required, check your connection</string>
    <string name="error_internet_lack_accessing">To perform the operation an internet connection is required, check your connection</string>
    <string name="error_internet_lack_services">Unable to translate message, check internet connection</string>
    <string name="error_internet_lack_loading_languages">To view the languages you need an internet connection, check your connection and try again</string>
    <string name="error_connection_rejected">refused the connection request</string>
    <string name="error_connection">Connection error</string>
    <string name="error_starting_search">Error starting search</string>
    <string name="error_cannot_interact_connection">cannot interact with devices during connection</string>
    <string name="error_cannot_interact_disconnection">cannot interact with devices during disconnection</string>
    <string name="error_wait_initialization">Wait for initialization</string>
    <string name="error_selecting_image">Error during image selection, use another gallery to select it</string>
    <string name="error_wait_download_end">Wait download finishes</string>
    <string name="error_age_unchecked">You must be at least 14 years old to use the app</string>
    <string name="error_privacy_unchecked">You must have read the privacy policy to use the app</string>
    <string name="error_missing_username">Insert a name</string>
    <string name="error_download">Error in the download, please ensure you have internet connection and retry:</string>
    <string name="error_transfer">Error in the transfer of the downloaded file from external to internal memory, please ensure you have not removed an sd card or other external storage devices and retry keeping the app open:</string>
    <string name="error_storage">Low storage space, the download may fail</string>
    <string name="title_fragment_user_data">Insert your data</string>
    <string name="title_fragment_download">Download of models</string>
    <string name="description_fragment_user_data">Your name will be displayed by all nearby devices, while your profile picture will only be shown on devices with which you have already had conversations</string>
    <string name="description_fragment_download">Now RTranslator will download the neural network models necessary for translation and speech recognition, once finished you can start using the app (even offline).</string>
    <string name="preference_header_language">Language</string>
    <string name="preference_header_output">Output</string>
    <string name="preference_header_input">Input</string>
    <string name="preference_header_advanced">Advanced</string>
    <string name="preference_title_languages_quality">Support low quality languages</string>
    <string name="preference_title_show_original_transcription">Show original transcriptions beyond the translation</string>
    <string name="preference_title_support_tts_quality">Support languages with low quality tts</string>
    <string name="preference_title_language">Personal language</string>
    <string name="preference_title_tts">Text to speech</string>
    <string name="preference_description_languages_quality">It allow to also supports languages that have low translation or speech recognition quality</string>
    <string name="preference_description_show_original_transcription_msg_preference">It allows to show the original transcription beyond the translation of the message.</string>
    <string name="preference_description_support_tts_quality">It allow to also supports languages that have a low quality speech synthesizer</string>
    <string name="preference_description_tts">System settings of tts, an eventual change of the preferred engine will be applied only after the restart of the app</string>
</resources>