<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright 2016 Luca Martino.
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copyFile of the License at
    *
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
    *-->


<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/gray"
    android:dividerHeight="1dp">

    <nie.translator.rtranslator.settings.UserImagePreference
        android:key="userImage"
        android:layout="@layout/preference_user_image"
        app:iconSpaceReserved="false" />

    <nie.translator.rtranslator.settings.UserNamePreference
        android:key="changeName"
        android:layout="@layout/preference_user_name"
        app:iconSpaceReserved="false" />

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_input"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true">
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="micSensibilitySetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_language"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <nie.translator.rtranslator.settings.SupportLanguagesQuality
            android:defaultValue="false"
            android:key="languagesNNQualityLow"
            android:title="@string/preference_title_languages_quality"
            android:summary="@string/preference_description_languages_quality"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SupportTtsQualityPreference
            android:defaultValue="false"
            android:key="languagesQualityLow"
            android:title="@string/preference_title_support_tts_quality"
            android:summary="@string/preference_description_support_tts_quality"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.LanguagePreference
            android:key="language"
            android:title="@string/preference_title_language"
            android:dialogTitle="Application language"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_output"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <androidx.preference.Preference
            android:key="tts"
            android:title="@string/preference_title_tts"
            android:summary="@string/preference_description_tts"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_advanced"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true">
        <nie.translator.rtranslator.settings.ShowOriginalTranscriptionMsgPreference
            android:defaultValue="false"
            android:key="ShowOriginalTranscriptionMsgPreference"
            android:title="@string/preference_title_show_original_transcription"
            android:summary="@string/preference_description_show_original_transcription_msg_preference"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="BeamSizeSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="SpeechTimeoutSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="PrevVoiceDurationSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
        <androidx.preference.Preference
            android:key="modelsManager"
            android:title="Models Manager"
            android:summary="Chose the model you want to use for translation"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>